# Universal Text Encoding as Meaning Compiler                                  #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                             _        _                                       #
#                            /@\——————/@\                                      #
# .———  .                   |   o    o   |     .————      .            .       #
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   . #
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   | #
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /  #
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |   #
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |   #
#                 |        \              /                              __/   #
#                           ¯————————————¯                                     #
# Cargo.toml                                                                   #

################################################################################

[package]
name = "utemc"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]

################################################################################

license = "MIT"
documentation = "https://docs.rs/utemc"
homepage = "http://plopgrizzly.com/utemc"
repository = "https://github.com/plopgrizzly/utem"

################################################################################

readme = "README.md"
description = """
    The UTEM-Compiler is a command line utility developed by Plop Grizzly for
    translating to UTEM (Universal Text Encoding as Meaning) bytecode.
"""
keywords = ["translate", "translator", "language", "text", "universal"]
categories = ["encoding", "parsing", "text-processing"]

################################################################################

exclude = ["examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore"]

################################################################################

[dependencies]
utem = { path = "../utem/" }

################################################################################
